# assay-spec-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: app.py
example/attributes/: affinity_tag.yaml  assay_category.yaml  assay_readout.yaml  luciferase.yaml  microplate.yaml  reagent.yaml
example/projects/: STAT3.yaml  p53_Mdm2.yaml
example/protocols/: Keap1_Nrf2_FP.yaml  STAT1_reporter.yaml  STAT3_reporter.yaml  p53_Mdm2_HTRF.yaml  p53_Mdm2_HTRF_artifact.yaml
example/templates/: binding.yaml  enzyme.yaml  reporter.yaml  viability.yaml
src/assay_spec_utils/: datasource.py  model.py  parser.py  run.py  util.py
tests/: test_parser.py
